syntax = "proto3";

option csharp_namespace = "StockBroker.gRPC";

message ClientCredentialsRequest 
{
	string clientId = 1;
	string clientSecret = 2;
}