syntax = "proto3";

option csharp_namespace = "StockBroker.gRPC";

message AuthenticateResponse 
{
	string bearerToken = 1;
}