syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "messaging/requests/client_credentials_request.proto";
import "messaging/responses/authenticate_response.proto";

option csharp_namespace = "StockBroker.gRPC";

service StocksService {
	rpc Authenticate (ClientCredentialsRequest) returns (AuthenticateResponse);
	rpc GetStocks (google.protobuf.Empty) returns (StocksResponse);
	rpc GetStockPrice (StockViewModel) returns (StockPriceResponse);
	rpc GetStockPriceStream (google.protobuf.Empty) returns (stream StockPriceResponse);
	rpc GetStocksPrices (stream StockViewModel) returns (StocksPricesResponse);
	rpc GetCompanyStockPriceStream (stream StockViewModel) returns (stream StockPriceResponse);
}

message StocksPricesResponse
{
	repeated StockPriceResponse stocks = 1;
}

message StockViewModel {
	string stockId = 1;
	string stockName = 2;
}

message StockPriceResponse {
	StockViewModel stock = 1;
	string price = 2;
	google.protobuf.Timestamp dateTimeStamp = 3;
}

message StocksResponse {
	repeated StockViewModel stocks = 1;
}
